--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ repositories {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.amqp:spring-rabbit:1.4.4.RELEASE")
     runtime("com.h2database:h2")
     testCompile("org.springframework.boot:spring-boot-starter-test") 
 }
